--- a/src/index.html
+++ b/src/index.html
@@ -2,21 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <title>ToDo App</title>
         <link rel="stylesheet" href="style.css">
-        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+        <script src="./ts/main.ts" defer type="module"></script>
     </head>
     <body>
-        <div class="wrapper">
+        <div>
+            <input class="text-center border-primary" id="newTaskInput" type="text" name="newtask" placeholder="Your task here!">
+            <button class="position-fixed border-secondary" type="button" id="taskField">Create new task</button>
             <header>ToDo App</header>
-            <div class="inputField">
-                <input type="text" placeholder="Add new task">
-                <button><i class="fas fa-plus"></i></button>
-            </div>
-            <ul class="todoList">
-                <li>Test app <span><i class="fas fa-trash"></i></span></li>
-            </ul>
         </div>
     </body>
-</html>
+</html> 
