--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
-        <title>ToDo App</title>
+        <title>To-do list</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <h3></h3>
         <div>
-            <header>ToDo App</header>
+            <header>To-do list</header>
             <input class="text-center border-primary" id="newTaskInput" type="text" name="newtask" placeholder="Your task here!">
             <button class="position-fixed border-secondary" type="button" id="taskField">Create new task</button>
         </div>
