--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <title>To-do list</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">">
+        
+        <script src="ts/main.ts" defer type="module"></script>
     </head>
     <body>
-        <h3></h3>
-        <div>
-            <header>To-do list</header>
+        <div class="container">
+            <h1 class="display1">To-do list</h1>
             <input class="text-center border-primary" id="newTaskInput" type="text" name="newtask" placeholder="Your task here!">
             <button class="position-fixed border-secondary" type="button" id="taskField">Create new task</button>
+        </div>
+        <div>
+            <input>
         </div>
     </body>
 </html> 
